--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Correo: irguingfrautes@gmail.com</h1>
+    <script type="module" src="app.js"></script>
     
 </body>
 </html>
